# seattle-outdoor-volunteering

./: .gitignore  CLAUDE.md  CURRENT_WORK_SPF.md  DATA_SOURCES.md  README.md  TODO.md  example_usage.py  planning.md  pyproject.toml  requirements.txt  test_normalization.py  test_smart_quotes.py
.github/: copilot-instructions.md
.github/workflows/: build-site.yml  deploy-site.yml  etl.yml  test.yml  update-deps.yml
data/: events.sqlite  manual_events.yaml
docs/: gh-actions-log-triage.md  index.html
issues/: 1
scripts/: git_pack_size.sh  update_deps.sh
src/: cli.py  config.py  database.py  llm.py  llm_canonicalization.py  models.py
src/etl/: base.py  date_utils.py  deduplication.py  deduplication_new.py  dnda.py  earthcorps.py  fremont_neighbor.py  gsp.py  gsp_new.py  manual.py  new_deduplication.py  request_throttle.py  spf.py  splink_dedupe.py  spr.py  spu.py  url_utils.py  utils.py
src/llm/: blog_event_extractor.py  event_categorization.py  llm.py  llm_canonicalization.py
src/site/: generator.py
src/site/templates/: index.html.j2
tests/: test_canonical_database.py  test_database.py  test_deduplication.py  test_etl_gsp.py  test_etl_spf.py  test_etl_spr.py  test_models.py  test_normalization.py  test_smart_quotes.py
tests/database/: test_canonical_data.py  test_detail_page_enrichment.py  test_source_data.py
tests/etl/: test_etl_dnda.py  test_etl_earthcorps.py  test_etl_fremont_neighbor.py  test_etl_gsp.py  test_etl_manual.py  test_etl_spf.py  test_etl_spr.py  test_etl_spu.py  test_github_models.py  test_request_throttle.py
tests/etl/data/: dnda_events.json  dnda_volunteer_events.json  earthcorp_calendar_2025_08.json  earthcorps_calendar_2025_08.html  fremont_neighbor_rss.xml  github_models_catalog.json  gsp_api_100.json  gsp_api_invalid_date.json  gsp_calendar.html  gsp_detail_page.html  seattle_utilities_cleanup.html  spf_detail_page.html  spf_events.html  spr_volunteer.rss
tests/fixtures/: download_examples.sh  gsp_api_100.json  spr_calendar.html
