[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seattle-outdoor-volunteering"
version = "0.1.0"
description = "Aggregates Seattle-area outdoor volunteer events into a compressed SQLite database and publishes a minimal static website"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Keith", email = "keith@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "beautifulsoup4",
    "requests",
    "pydantic",
    "click",
    "jinja2",
    "staticjinja",
    "sqlalchemy",
    "python-dateutil",
    "python-dotenv",
    "pyyaml",
    "splink",
    "rapidfuzz",
    "openai>=1.98.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
seattle-volunteering = "src.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "llm: marks tests that use LLM APIs (deselect with '-m \"not llm\"')",
]
addopts = "-m 'not llm'"

[tool.ruff]
line-length = 150
extend-select = ["I", "F401"]
